fix: saves states requests already solved in paxos by other leaders
Co-authored-by: André Matos <andrem000@users.noreply.github.com>
Co-authored-by: Diogo Ribeiro <diogo.l.ribeiro@tecnico.ulisboa.pt>